########################################################################
# CMakeList.txt plugins
########################################################################

# add_subdirectory( about )

# add_subdirectory( level )

# add_subdirectory( charts )

# add_subdirectory( settings )

# add_subdirectory( wizard )

# add_subdirectory( updater )

# add_subdirectory( exam )
